--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -298,15 +298,29 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1PZ-lZ-gyX">
+                                <rect key="frame" x="146.66666666666666" y="494" width="100" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="yEt-q3-32R"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="我記住了"/>
+                                <connections>
+                                    <segue destination="04L-e8-13C" kind="show" id="qlf-26-Dv3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hXu-kE-dhV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vf1-Uv-5AK" firstAttribute="centerX" secondItem="oHX-A6-TJV" secondAttribute="centerX" id="2ja-1A-LMn"/>
+                            <constraint firstItem="hXu-kE-dhV" firstAttribute="bottom" secondItem="1PZ-lZ-gyX" secondAttribute="bottom" constant="289" id="6IN-ru-dGl"/>
                             <constraint firstItem="LSD-43-QcY" firstAttribute="centerX" secondItem="oHX-A6-TJV" secondAttribute="centerX" id="86U-0A-oWU"/>
                             <constraint firstItem="hXu-kE-dhV" firstAttribute="bottom" secondItem="vf1-Uv-5AK" secondAttribute="bottom" constant="457" id="Dx1-FE-Jzv"/>
+                            <constraint firstItem="1PZ-lZ-gyX" firstAttribute="centerX" secondItem="oHX-A6-TJV" secondAttribute="centerX" id="GrV-dV-H5F"/>
                             <constraint firstItem="vf1-Uv-5AK" firstAttribute="top" secondItem="LSD-43-QcY" secondAttribute="bottom" constant="125" id="S3i-X3-7us"/>
                             <constraint firstItem="hXu-kE-dhV" firstAttribute="bottom" secondItem="LSD-43-QcY" secondAttribute="bottom" constant="603" id="WjS-mZ-NZy"/>
+                            <constraint firstItem="1PZ-lZ-gyX" firstAttribute="top" secondItem="vf1-Uv-5AK" secondAttribute="bottom" constant="133" id="Zco-Bk-STK"/>
                             <constraint firstItem="LSD-43-QcY" firstAttribute="top" secondItem="hXu-kE-dhV" secondAttribute="top" constant="91" id="fEj-sW-9VL"/>
                         </constraints>
                     </view>
@@ -318,6 +332,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oyy-5f-XiB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6134" y="4"/>
+        </scene>
+        <!--Speak View Controller-->
+        <scene sceneID="2SY-wC-aox">
+            <objects>
+                <viewController id="04L-e8-13C" customClass="SpeakViewController" customModule="Spy_See" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h2j-GR-rST">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWG-WB-0lb">
+                                <rect key="frame" x="46.666666666666657" y="186" width="300" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="rK3-d1-Prp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mgb-Eh-Ki4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oWG-WB-0lb" firstAttribute="top" secondItem="mgb-Eh-Ki4" secondAttribute="top" constant="83" id="gdJ-Mw-IFG"/>
+                            <constraint firstItem="oWG-WB-0lb" firstAttribute="centerX" secondItem="h2j-GR-rST" secondAttribute="centerX" id="hbe-ga-gRj"/>
+                            <constraint firstItem="mgb-Eh-Ki4" firstAttribute="bottom" secondItem="oWG-WB-0lb" secondAttribute="bottom" constant="611" id="htb-o4-VXw"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="qAA-TO-GXu"/>
+                    <connections>
+                        <outlet property="promptLabel" destination="oWG-WB-0lb" id="8Ec-gm-H5o"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VAI-7e-fah" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6903" y="4"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QCp-Y1-tva">
